--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,7 @@
-greeting: Hello Debabrato How are you man
+configserver: true
+
+eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 10
+    metadataMap:
+      instanceId: ${vcap.application.instance_id:${spring.application.name}:${server.port:8080}}
